--- a/static/fonts/faruma.css
+++ b/static/fonts/faruma.css
@@ -1,10 +1,12 @@
 @font-face {
     font-family: 'Faruma';
-    src: url('Faruma.woff2') format('woff2'),
-         url('Faruma.woff') format('woff');
+    src: url('https://fonts.googleapis.com/css2?family=Noto+Sans+Dhivehi:wght@300;400;500;600;700&display=swap');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 .faruma {
-    font-family: 'Faruma', sans-serif;
+    font-family: 'Noto Sans Dhivehi', 'Arial Unicode MS', Arial, sans-serif;
+    font-weight: 400;
+    line-height: 1.6;
 }
