--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
     <!-- Font Loading Optimization -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Preload Dhivehi font for better performance -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans+Dhivehi:wght@300;400;500;600;700&display=swap" as="style">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Dhivehi:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="loading">
